# podcast-feed-updater

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  ENRICHMENT_GUIDE.md  PERSON_CACHE_GUIDE.md  PERSON_DATA_README.md  QUICKSTART_DEPLOYMENT.md  RADCREW_SETUP.md  README.md  activate.sh  add_guest_from_url.py  build_experiment_feed.py  build_list_feed.py  cdspill-enriched.xml  cdspill-spotify.xml  cdspill-test-no-content.xml  cdspill-test-no-description.xml  cdspill-test-no-summary.xml  cdspill-youtube.xml  cdspill_known_guests.json  cdspill_permanent_staff.json  download_cdspill_cache.py  enrich_cdspill.py  enrich_cdspill_fallback_test.py  enrich_cdspill_spotify.py  enrich_cdspill_youtube.py  example_config.yaml  example_usage.py  experiment-serial.xml  experiment.xml  fetch_episode_guests.py  list_episodes_by_length.py  list_guest_episodes.py  lookup_guest.py  populate_guests.py  pyproject.toml  rank_guests.py  split_radcrew.py  tiltcast-1.xml  tiltcast-2.xml  (+4 more)
.claude/: settings.json
.devcontainer/: create-env.sh
.feed_cache/: .gitkeep
chapters/: 100_chapters_json_chapters.json  1985_chapters.json  1991_chapters.json  1992_chapters.json  1993_chapters.json  1994_chapters.json  1995_chapters.json  Another_World6exgv_chapters.json  BASS_chapters.json  BattleChess_vizzy_chapters.json  Boppin_chapters.json  CaptainComic_chapters.json  CloseCombat_chapters.json  CyberDogs_chapters.json  Diablo_chapters.json  DigDug_chapters.json  DoubleDragon_chapters.json  DukeNukem_chapters.json  DungeonKeeper_chapters.json  EGA_Trek615tz_chapters_json_chapters.json  GabrielKnight_chapters.json  (+60 more)
(+70 files in other folders)
