[project]
name = "podcast-feed-updater"
version = "0.1.0"
description = "A tool to filter and enrich podcast RSS feeds"
requires-python = ">=3.10"
dependencies = [
    "feedparser>=6.0.11",
    "feedgen>=1.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
